V1.5.4 Test correction version mobile

--- a/src/Header.scss
+++ b/src/Header.scss
@@ -6,7 +6,7 @@ header {
 	z-index: 1;
 	height: 80px;
 	margin-top: 0px; /* Retrait de la marge du header en haut */
-    width: 100%;
+    width: 100vh;
     padding-left: 10px;
 	padding-right: 10px;
     width: calc(100% - 20px);
