--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-html {
+html, body {
   font-family: Poppins, Calibri, Arial, sans-serif;
 
 	scroll-behavior: smooth;
